# project

./: README.md  backend.Dockerfile  docker-compose.yml  endpoints project  pyproject.toml
app/: database.py  dependencies.py  main.py
app/api/: board.py  card.py  task.py  user.py
app/core/: config.py  security.py
app/models/: board.py  card.py  task.py  user.py
app/repositories/: board_repository.py  card_repository.py  task_repository.py  user_repository.py
app/services/: board_service.py  card_service.py  task_service.py  user_service.py
final_project/final_project/: main.py
final_project/tests/: test_main.py
tests/: test_main.py
